# socketwrapper

./: .clang-format  .gitignore  BaseSocket.cpp  BaseSocket.hpp  CMakeLists.txt  LICENSE  Makefile  README.md  TCPSocket.cpp  TCPSocket.hpp  UDPSocket.cpp  UDPSocket.hpp  main.cpp  socketwrapper.hpp
Exceptions/: BaseException.hpp  SocketBindException.cpp  SocketBindException.hpp  SocketBoundException.cpp  SocketBoundException.hpp  SocketCloseException.cpp  SocketCloseException.hpp  SocketCreationException.cpp  SocketCreationException.hpp
example/: Makefile  async_tcp_example.cpp  async_tls_example.cpp  async_udp_example.cpp  main.cpp  options_example.cpp  span_example.cpp  tcp_example.cpp  tls_example.cpp  udp_example.cpp
include/: BaseException.hpp  BaseSocket.hpp  SSLTCPSocket.hpp  SetSockOptException.hpp  SocketAcceptingException.hpp  SocketBindException.hpp  SocketBoundException.hpp  SocketCloseException.hpp  SocketConnectingException.hpp  SocketCreationException.hpp  SocketListenException.hpp  SocketReadException.hpp  SocketWriteException.hpp  TCPSocket.hpp  UDPSocket.hpp  socketwrapper
include/socketwrapper/: address.hpp  awaitable.hpp  endpoint.hpp  socket_option.hpp  socketwrapper.hpp  span.hpp  task.hpp  tcp.hpp  tls.hpp  udp.hpp  utility.hpp
include/socketwrapper/detail/: async.hpp  base_socket.hpp  callbacks.hpp  event_loop.hpp  event_notifier.hpp  event_notifier_epoll.hpp  event_notifier_kqueue.hpp  executor.hpp  message_notifier.hpp  socket_option.hpp  threadpool.hpp  utility.hpp
src/: BaseSocket.cpp  BaseSocket.hpp  SSLTCPSocket.cpp  TCPSocket.cpp  TCPSocket.hpp  UDPSocket.cpp  UDPSocket.hpp
